Exchange Synaptics panel driver
Change-Id: Icca09cda60c27bc7adfba3e2c4cdca4aa6b93089

--- a/arch/arm64/configs/lineage_oneplus5_defconfig
+++ b/arch/arm64/configs/lineage_oneplus5_defconfig
@@ -1937,7 +1937,6 @@ CONFIG_SECURE_TOUCH=y
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_IT7260_I2C is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_S3320_I2C_RMI=y
 # CONFIG_TOUCHSCREEN_ST is not set
 CONFIG_INPUT_FINGERPRINT=y
 CONFIG_FINGERPRINT_DETECT=y
@@ -5267,3 +5266,9 @@ CONFIG_SECURITY_TOMOYO_ACTIVATION_TRIGGER="/sbin/init"
 CONFIG_EVM_HMAC_VERSION=2
 CONFIG_NET_CLS_CGROUP=y
 CONFIG_CGROUP_NET_CLASSID=y
+
+CONFIG_RMI4_CORE=y
+CONFIG_RMI4_I2C=y
+CONFIG_RMI4_2D_SENSOR=y
+CONFIG RMI4_F11=y
+CONFIG_RMI4_F12=y
