Adding missing dts changes
Change-Id: I164f209444d71cd49a27ec647e31cfa7e5083faa

--- a/arch/arm/boot/dts/qcom/dumpling.dtsi
+++ b/arch/arm/boot/dts/qcom/dumpling.dtsi
@@ -659,6 +659,7 @@
 };
 
 &i2c_5 {
+        /delete-node/ synaptics@20;
         touchscreen@20 {
                 compatible = "syna,rmi4-i2c";
                 reg = <0x20>;
